--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,25 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #000000; /* Opcional: para darle un color de fondo */
+  background-color: #1E1E1E;
+  color: #ffffff;
+}
+
+.app-container {
+  font-family: 'Times New Roman', sans-serif;
+}
+
+.Formulario p, .Registro p {
+  color: #ff0000;
+  margin-top: 1px;
+}
+
+.link-registro {
+  color: #107361;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.link-registro:hover {
+  color: #0F5959;
 }
